fix(test): menu not showing

--- a/projects/ngx-mat-input-tel-tester/src/styles.scss
+++ b/projects/ngx-mat-input-tel-tester/src/styles.scss
@@ -1,5 +1,7 @@
 @use '@angular/material' as mat;
 
+@include mat.core();
+
 $theme: mat.define-theme(
   (
     color: (
@@ -7,7 +9,7 @@ $theme: mat.define-theme(
       primary: mat.$violet-palette,
     ),
     typography: (
-      brand-family: 'Comic Sans',
+      brand-family: 'Roboto',
       bold-weight: 900,
     ),
     density: (
@@ -16,10 +18,13 @@ $theme: mat.define-theme(
   )
 );
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
-
-body {
-  font-family: 'Roboto', sans-serif;
-
+html {
   @include mat.all-component-themes($theme);
+
+  @include mat.core-theme($theme);
+
+  // Somehow fix the menu not showing
+  .mat-mdc-menu-panel {
+    height: fit-content;
+  }
 }
